--- a/backend/package.json
+++ b/backend/package.json
@@ -4,20 +4,18 @@
   "description": "",
   "main": "src/loader.js",
   "scripts": {
-    "dev":"nodemon",
-    "production":"pm2 start src/loader.js --name todo-app"
+    "dev": "nodemon",
+    "production": "pm2 start src/loader.js --name todo-app"
   },
   "keywords": [],
-  "author": "Kaique Bernardo",
+  "author": "",
   "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "mongoose": "^5.9.16",
-    "node-restful": "^0.2.6",
-    "pm2": "^4.4.0"
-  },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
+    "mongoose": "^4.7.0",
+    "node-restful": "^0.2.5",
+    "nodemon": "^1.11.0",
+    "pm2": "^2.1.5"
   }
 }
