--- a/todo-frontend/package.json
+++ b/todo-frontend/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "axios": "^0.21.1",
-    "react-router": "^5.2.0"
+    "react-router": "^5.2.0",
+    "styled-components": "^5.3.0"
   }
 }
